--- a/app/package.json
+++ b/app/package.json
@@ -28,8 +28,10 @@
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/platform-fastify": "^6.10.1",
     "@nestjs/typeorm": "^6.2.0",
+    "@types/bcrypt": "^3.0.0",
     "amqp-connection-manager": "^3.0.0",
     "amqplib": "^0.5.5",
+    "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
