--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/microservices": "^6.10.2",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/platform-fastify": "^6.10.1",
@@ -36,7 +37,10 @@
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
     "helmet": "^3.21.2",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
+    "nest-schedule": "^0.6.3",
+    "nestjs-command": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -48,11 +52,13 @@
     "@nestjs/cli": "^6.9.0",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
+    "@types/amqp-connection-manager": "^2.0.4",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
+    "@types/yargs": "^13.0.3",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
